fix mobile menu layout and fix wrap in hero section content

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -110,7 +110,7 @@
         position: fixed;
         top: 80px;
         right: 0;
-        height: 50vh;
+        height: 500px;
         width: 100%;
         transform: translateX(100%);
         transition: transform .4s cubic-bezier(.2,.8,.2,1), opacity .3s;
@@ -211,4 +211,10 @@
         transform: translateY(-2px);
     }
 
+}
+
+@media screen and (max-height: 550px){
+    .contactBtn{
+        display: none;
+    }
 }
